--- a/package.json
+++ b/package.json
@@ -3,12 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "browserslist": [
-    "chrome 39"
-  ],
   "scripts": {
     "dev": "vite",
-    "build": "npm run lint && node config/build.js",
+    "build": "npm run lint && cd config && node ./build.js",
     "lint": "eslint './src/*'"
   },
   "devDependencies": {
